<resources>
    <string name="app_name">ESearch</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="none">None</string>
    <string name="manage">Manage List</string>
    <string name="typeHere">Type here</string>
    <string name="selectSearchEngine">Select search engines</string>
    <string name="disabledService">Disabled engines</string>
    <string name="activeServices">Active engines</string>
    <string name="minIsTwo">The minimum of search engines is two</string>
    <string name="emptyQuery">Empty query!</string>
    <string name="downloading">Download started</string>
    <string name="appError">You have no app to open this url</string>
    <string name="searchInGoogle">Search in google</string>
    <string name="cantGoForward">Can\'t go forward</string>
    <string name="cantGoBack">Can\'t go back</string>
    <string name="description">Description</string>
    <string name="address">Url address</string>
    <string name="addBookmark">Bookmark creation</string>
    <string name="bookmarkAdded">Bookmark added</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="noBookmarks">No bookmarks found</string>
    <string name="noHistory">You have no history</string>
    <string name="history">History</string>
    <string name="fillAllFields">Fill al fields first!</string>
    <string name="download">Download</string>
    <string name="ok_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="vpn">VPN</string>
    <string name="addShortcut">Add shortcut</string>
    <string name="shortcutAdded">Shortcut added</string>
    <string name="refresh">Refresh</string>
    <string name="addToBookmarks">Add to bookmarks</string>
    <string name="createShortcuts">Create shortcut</string>
    <string name="share">Share</string>
    <string name="translate">Translate</string>
    <string name="findInPage">Find in page</string>
    <string name="desktopMode">Desktop mode</string>
    <string name="addTo">Add to</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="homeScreen">Home screen</string>
    <string name="saveAsPDF">Save page as PDF</string>
    <string name="downloads">Downloads</string>
    <string name="adblock">AdBlock</string>
    <string name="imageLoading">Load images</string>
    <string name="location">Geolocation</string>
    <string name="camera">Camera access</string>
    <string name="mic">Microphone access</string>
    <string name="saveHistory">Save history</string>
    <string name="cookies">Cookies</string>
    <string name="javascript">Javascript</string>
    <string name="popupMessages">Popup messages</string>
    <string name="domStorage">Dom storage</string>
    <string name="permissionRequest">Permission request</string>
    <string name="permDRM">Allow DRM protected media playback?</string>
    <string name="locationPerm">Access webpage to know your location?</string>
    <string name="cameraPerm">Access webpage to use camera? Restart app after that</string>
    <string name="recordPerm">Access webpage to use your microphone? Restart app after that</string>
    <string name="eyeProtection">Eye protection</string>
    <string name="makeScreenshot">Make screenshot</string>
    <string name="noExternalStorageAccess">App have no access to external storage</string>
    <string name="tabsOpened">Tabs opened</string>
    <string name="clearTabs">Clear opened tabs</string>
    <string name="clearTabsMessage">This will irrevocably clear all your tabs</string>
    <string name="noTabs">You have no tabs to clear</string>
    <string name="tabs">Tabs</string>
    <string name="undo">Undo</string>
    <string name="noTabsHere">You have no tabs</string>
    <string name="saveTabs">Save opened tabs</string>
    <string name="url">URL</string>
    <string name="openInNewTab">Open in a new tab</string>
    <string name="copy">Copy  to clipboard</string>
    <string name="image">Image</string>
    <string name="saved">Saved</string>
    <string name="clearHistory">Clear history</string>
    <string name="clearHistoryMessage">This will irrevocably clear all your history</string>
    <string name="noHistoryClear">You have no history to clear</string>
    <string name="backgroundAudio">Background audio</string>
    <string name="clickToOpenApp">Click to open app</string>
    <string name="behaviorSettings">Behavior</string>
    <string name="dataSettings">Storage</string>
    <string name="advanced">Advanced</string>
    <string name="permissions">Permissions</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="bookmarkSaved">Bookmark saved</string>
    <string name="shortcutSaved">Shortcut saved</string>
    <string name="downloadFinished">Download finished</string>
    <string name="openDownloadFolder">Download completed. Open it in download folder?</string>
    <string name="openDownloads">Open downloads</string>
    <string name="exitConfirm">Tap back again to exit</string>
    <string name="hidePanels">Hide panels</string>
    <string name="restartBrowser">Restart browser to see the changes</string>
    <string name="newBookmark">New bookmark</string>
    <string name="clearBookmarks">Clear bookmarks</string>
    <string name="clearBookmarksMessage">This will irrevocably clear all your bookmarks</string>
    <string name="noBookmarksClear">You have no bookmarks to clear</string>
    <string name="themeChooser">Choose color scheme</string>
    <string name="colorScheme">Color scheme</string>
</resources>