<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/manualBackground"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/addBookmark"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/done"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_done_24" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:theme="@style/EditTextStyle"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/description" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:theme="@style/EditTextStyle"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>