<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="?attr/colorSecondary" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bookmarks"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_more_vert_24"
            app:tint="?attr/colorSecondary" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookmarkRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_bookmark_border_24"
        app:layout_constraintBottom_toTopOf="@+id/text" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:gravity="center"
        android:text="@string/noBookmarks"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintTop_toTopOf="@+id/center" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:constraint_referenced_ids="text, image" />

</androidx.constraintlayout.widget.ConstraintLayout>