<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/manualBackground"
        android:elevation="5dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_close_24"
            app:tint="?attr/colorSecondary" />

        <TextView
            android:id="@+id/label"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tabsOpened"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/ripple"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_delete_sweep_24"
            app:tint="?attr/colorSecondary" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="48dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tabRecycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:stackFromEnd="true" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:contentDescription="@string/none"
            android:src="@drawable/ic_baseline_view_carousel_24"
            app:layout_constraintBottom_toTopOf="@+id/text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:gravity="center"
            android:text="@string/noTabsHere"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintTop_toTopOf="@+id/center" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/errorMessage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="text, image" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"
        android:contentDescription="@string/none"
        android:src="@drawable/ic_baseline_add_24"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>